# crunch-node-starter

./: .gitignore  .local.env  .local.trading.env  AGENTS.md  Dockerfile  Makefile  README.md  SKILL.md  SPEC.md  VantaPrompt.md  docker-compose.trading.yml  docker-compose.yml  pyproject.toml  session.html
.github/workflows/: benchmark.yml  ci.yml
base/: AGENTS.md
base/.agent/: context.md
coordinator_node/: __init__.py  alembic.ini  config_loader.py  crunch_config.py
coordinator_node/alembic/: env.py
coordinator_node/cli/: __init__.py  __main__.py  scaffold.py
coordinator_node/db/: feed_records.py  init_db.py  repositories.py  session.py
coordinator_node/entities/: feed_record.py
coordinator_node/feeds/: contracts.py  registry.py
coordinator_node/metrics/: __init__.py  builtins.py  timing.py
coordinator_node/schemas/: timing.py
coordinator_node/services/: checkpoint.py  feed_data.py  feed_reader.py  parquet_sink.py  predict.py  realtime_predict.py  score.py  tournament_predict.py
coordinator_node/workers/: checkpoint_worker.py  predict_worker.py  report_worker.py  score_worker.py
crunch_node/: __init__.py  alembic.ini  api_discovery.py  config_loader.py  crunch_config.py  id_prefixes.py
crunch_node/alembic/: env.py
crunch_node/cli/: __init__.py  __main__.py  scaffold.py
crunch_node/config/: __init__.py  extensions.py  runtime.py
crunch_node/db/: __init__.py  backfill_jobs.py  feed_records.py  init_db.py  pg_notify.py  protocols.py  repositories.py  trading_state_repository.py
crunch_node/entities/: __init__.py  feed_record.py  model.py  prediction.py
crunch_node/extensions/: __init__.py  callable_resolver.py  default_callables.py  emission_strategies.py
crunch_node/feeds/: __init__.py  base.py  registry.py
crunch_node/merkle/: __init__.py  (+3 more)
docs/: README.md  architecture.md  crunch-config.md  data-pipeline.md  data-transformation-flow.md  database-schema.md  deployment.md  feed-system.md  merkle.md  pipeline-latency-analysis.md  presentation.html  presentation.md  presentation.pptx  report-api.md  scaffold.md  scoring-and-aggregation.md  timing-instrumentation-implementation-summary.md  todo.md
packs/: README.md
scaffold/: AGENTS.md  CLAUDE.md  Makefile  README.md
scaffold/challenge/: README.md  pyproject.toml
scaffold/challenge/starter_challenge/: __init__.py  backtest.py  config.py  cruncher.py  scoring.py  tracker.py
scaffold/challenge/starter_challenge/examples/: README.md  __init__.py  mean_reversion_tracker.py  trend_following_tracker.py  volatility_regime_tracker.py
scaffold/challenge/tests/: test_examples.py  test_scoring.py  test_tracker.py
tests/: conftest.py  test_api_auth.py  test_api_discovery.py  test_backfill.py  test_backfill_endpoints.py  test_backfill_jobs.py  test_backtest_harness.py  test_backtest_output_shape.py  test_callable_resolver.py  test_checkpoint_interval.py  test_checkpoint_worker.py  test_collective_endpoints.py  test_config_loader.py  test_configurable_predict_service.py  test_contract_loader.py  test_coordinator_core_schema.py  test_coordinator_runtime_data_feeds.py  test_core_entities.py  test_crunch_config_hooks.py  test_diversity_feedback.py  test_e2e_ui_smoke.sh  test_emission_strategies.py  test_ensemble_service.py  test_feed_normalizers.py  test_feed_window.py  test_inference_output_visible.py  test_leaderboard_service.py  test_merkle.py  test_metrics_builtins.py  test_metrics_registry.py  test_mongodb_feed.py  test_multi_asset_example.py  test_multi_metric_scoring.py  test_node_template_predict_service.py  test_node_template_report_worker.py  test_node_template_repositories.py  test_node_template_score_service.py  test_output_validation.py  test_pack_prediction.py  test_pack_realtime.py  (+49 more)
(+266 files in other folders)
